Attempt to fix white space at top of hero section when scrolling upward

--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ nav>button {
     width: 100%;
     background: url('../images/nebula-background-wavy.jpg') no-repeat center center;
     background-size: cover;
-    padding-top: 120px;
+    /* padding-top: 120px; */
 }
 .hero-text {
     width: 90%;
